fomrat and fixes

--- a/nanobrowse/templates/account_viewer.html
+++ b/nanobrowse/templates/account_viewer.html
@@ -40,7 +40,7 @@
             <td class="bg-blue-500 text-white text-xs px-3 rounded w-32 h-6 flex items-center justify-center">
               Balance
             </td>
-            <td class="px-3 py-1 font-bold">Ӿ {{account_data['confirmed_balance'] }}</td>
+            <td class="px-3 py-1 font-bold">{{account_data['confirmed_balance'] }}</td>
           </tr>
 
           {% if account_data['show_weight'] %}
