--- a/nanobrowse/templates/block_viewer/send_receive.html
+++ b/nanobrowse/templates/block_viewer/send_receive.html
@@ -9,19 +9,19 @@
       <div class="ml-6 bg-blue-500 h-12 w-1"></div>
     </div>
     <div class="text-left ml-4">
-      <span class="text-2xl font-bold">
+      <div class="text-2xl font-bold">
         Sender {% if block_data.send_block.is_known_sender %}
         <span class="text-xl font-light"> {% if block_data.send_block.known_sender.url %}
         <a href="{{ block_data.send_block.known_sender.url }}">: {{ block_data.send_block.known_sender.name }}</a>
         {% else %}: {{ block_data.send_block.known_sender.name }}{% endif %}</span> {% endif %}
-      </span>
+      </div>
 
-      <span class="bg-blue-500 text-white text-sm px-2 py-1 rounded overflow-hidden whitespace-nowrap">
+      <div class="bg-blue-500 text-white text-sm px-2 py-1 rounded overflow-hidden whitespace-nowrap">
         <i class="copy_btn" data-value="{{block_data.send_block.sender}}"></i>
         <a href="{{ request.url_root }}account/{{ block_data.send_block.sender }}">
           {{ block_data.send_block.sender }}
         </a>
-      </span>
+      </div>
     </div>
   </div>
 
@@ -29,12 +29,12 @@
   <!-- Send Block -->
 
   <!-- Ensure this div spans full width -->
-  <div class="border-2 border-blue-500 bg-blue-100 rounded p-2 text-blue-500 mb-20 w-full relative text-center">
+  <div class="border-2 border-blue-500 bg-blue-100 rounded p-2 text-blue-600 mb-20 w-full relative text-center">
     <span class="text-xs whitespace-nowrap overflow-hidden block mb-1 mt-1">
       <i class="copy_btn" data-value="{{block_data.send_block.hash}}"></i>
       <a href="{{ request.url_root }}block/{{ block_data.send_block.hash }}">{{ block_data.send_block.hash }}</a>
     </span>
-    <p class="text-2xl font-bold text-center mb-6">{{ block_data.send_block.amount }} Ӿ</p>
+    <p class="text-2xl font-bold text-center mb-6">{{ block_data.send_block.amount_formatted }}</p>
     <span class="absolute bottom-2 left-2 bg-blue-500 text-white text-xs px-2 py-1 rounded">
       {{ block_data.send_block.status }}
     </span>
@@ -46,14 +46,15 @@
     </span>
   </div>
   
-  
   <!-- Receive Block -->
-  <div class="border-2 border-green-500 bg-green-100 rounded p-2 text-green-500 w-full text-center relative">
+    {% if block_data.receive_block.hash_exists %}
+  <!-- Receive Block -->
+  <div class="border-2 border-green-500 bg-green-100 rounded p-2 text-green-600 w-full text-center relative">
    <span class="text-xs whitespace-nowrap overflow-hidden block mb-1 mt-1">
       <i class="copy_btn" data-value="{{block_data.receive_block.hash}}"></i>
       <a href="{{ request.url_root }}block/{{ block_data.receive_block.hash }}">{{ block_data.receive_block.hash }}</a>
     </span>
-    <p class="text-2xl font-bold text-center mb-6">{{ block_data.send_block.amount }} Ӿ</p>
+    <p class="text-2xl font-bold text-center mb-6">{{ block_data.receive_block.amount_formatted }}</p>
     <span class="absolute bottom-2 left-2 bg-green-500 text-white text-xs px-2 py-1 rounded">
       {{ block_data.send_block.status }}
     </span>
@@ -64,6 +65,16 @@
       {{ block_data.receive_block.block_type }}
     </span>
   </div>
+  {% else %}
+    <!-- No Receive Block -->
+    <div class="border-2 border-gray-400 bg-gray-200 rounded p-2 text-gray-500 w-full text-center relative">
+    <p class="text-2xl font-bold text-center mb-6">Ready for recipient to receive</p>
+    <span class="absolute bottom-2 right-2 bg-gray-400 text-white text-xs px-2 py-1 rounded">
+      receive block
+    </span>
+    </div>
+    {% endif %}
+  
   
   <!-- Receiver Pin Shape -->
   <div class="flex items-start">
@@ -74,24 +85,24 @@
       <div class="w-12 h-12 border-2 border-green-500 rounded-full"></div>
         {% else %}
           <!-- gray -->
-          <div class="ml-6 bg-gray-500 h-8 w-1"></div>
+          <div class="ml-6 bg-gray-500 h-12 w-1"></div>
       <div class="w-12 h-12 border-2 border-gray-500 rounded-full"></div>
         {% endif %}
       
     </div>
     <div class="text-left ml-4 mt-10">
-      <span class="text-2xl font-bold">
+      <div class="text-2xl font-bold">
         Receiver {% if block_data.send_block.is_known_receiver %}<span class="text-xl font-light"> {% if block_data.send_block.known_receiver.url %}
         <a href="{{ block_data.send_block.known_receiver.url }}">: {{ block_data.send_block.known_receiver.name }}</a>
         {% else %}: {{ block_data.send_block.known_receiver.name }}{% endif %}</span> {% endif %}
-      </span>
+      </div>
 
-      <span class="bg-green-500 text-white text-sm px-2 py-1 rounded overflow-hidden whitespace-nowrap">
+      <div class="bg-green-500 text-white text-sm px-2 py-1 rounded overflow-hidden whitespace-nowrap">
         <i class="copy_btn" data-value="{{block_data.send_block.sender}}"></i>
         <a href="{{ request.url_root }}account/{{ block_data.send_block.sender }}">
           {{ block_data.send_block.sender }}
         </a>
-      </span>
+      </div>
     </div>
   </div>
   
