bugfix and format

--- a/nanobrowse/templates/block_viewer/change.html
+++ b/nanobrowse/templates/block_viewer/change.html
@@ -33,7 +33,7 @@
       <i class="copy_btn" data-value="{{block_data.change_block.hash}}"></i>
       <a href="{{ request.url_root }}block/{{ block_data.change_block.hash }}">{{ block_data.change_block.hash }}</a>
     </span>
-    <p class="font-light mb-6">delegate<span class="text-2xl font-bold"> {{ block_data.change_block.balance }} Ӿ</span></p>
+    <p class="font-light mb-6">delegate<span class="text-2xl font-bold"> {{ block_data.change_block.balance }}</span></p>
     <span class="absolute bottom-2 left-2 bg-purple-500 text-white text-xs px-2 py-1 rounded">
       {{ block_data.change_block.status }}
     </span>
