--- a/nanobrowse/templates/block_viewer/send_receive.html
+++ b/nanobrowse/templates/block_viewer/send_receive.html
@@ -29,8 +29,8 @@
   <!-- Send Block -->
 
   <!-- Ensure this div spans full width -->
-  <div class="border-2 border-blue-500 bg-blue-100 rounded p-2 text-blue-600 mb-20 w-full relative text-center">
-    <span class="text-xs whitespace-nowrap overflow-hidden block mb-1 mt-1">
+  <div class="border-2 border-blue-500 bg-blue-100 rounded p-2 text-blue-500 mb-20 w-full relative text-center">
+    <span class="text-xs whitespace-nowrap overflow-hidden block mb-1 mt-1 text-blue-600">
       <i class="copy_btn" data-value="{{block_data.send_block.hash}}"></i>
       <a href="{{ request.url_root }}block/{{ block_data.send_block.hash }}">{{ block_data.send_block.hash }}</a>
     </span>
@@ -49,8 +49,8 @@
   <!-- Receive Block -->
     {% if block_data.receive_block.hash_exists %}
   <!-- Receive Block -->
-  <div class="border-2 border-green-500 bg-green-100 rounded p-2 text-green-600 w-full text-center relative">
-   <span class="text-xs whitespace-nowrap overflow-hidden block mb-1 mt-1">
+  <div class="border-2 border-green-500 bg-green-100 rounded p-2 text-green-500 w-full text-center relative">
+   <span class="text-xs whitespace-nowrap overflow-hidden block mb-1 mt-1 text-green-600">
       <i class="copy_btn" data-value="{{block_data.receive_block.hash}}"></i>
       <a href="{{ request.url_root }}block/{{ block_data.receive_block.hash }}">{{ block_data.receive_block.hash }}</a>
     </span>
@@ -99,8 +99,8 @@
 
       <div class="bg-green-500 text-white text-sm px-2 py-1 rounded overflow-hidden whitespace-nowrap">
         <i class="copy_btn" data-value="{{block_data.send_block.sender}}"></i>
-        <a href="{{ request.url_root }}account/{{ block_data.send_block.sender }}">
-          {{ block_data.send_block.sender }}
+        <a href="{{ request.url_root }}account/{{ block_data.send_block.receiver }}">
+          {{ block_data.send_block.receiver }}
         </a>
       </div>
     </div>
