fix block_viewer destination

--- a/nanobrowse/templates/block_viewer/send_receive.html
+++ b/nanobrowse/templates/block_viewer/send_receive.html
@@ -98,7 +98,7 @@
       </div>
 
       <div class="bg-green-500 text-white text-sm px-2 py-1 rounded overflow-hidden whitespace-nowrap">
-        <i class="copy_btn" data-value="{{block_data.send_block.sender}}"></i>
+        <i class="copy_btn" data-value="{{block_data.send_block.receiver}}"></i>
         <a href="{{ request.url_root }}account/{{ block_data.send_block.receiver }}">
           {{ block_data.send_block.receiver }}
         </a>
