--- a/nanobrowse/templates/block_viewer/change.html
+++ b/nanobrowse/templates/block_viewer/change.html
@@ -71,9 +71,9 @@
       </div>
 
       <div class="bg-purple-500 text-white text-sm px-2 py-1 rounded overflow-hidden whitespace-nowrap">
-        <i class="copy_btn" data-value="{{block_data.change_block.sender}}"></i>
-        <a href="{{ request.url_root }}account/{{ block_data.change_block.sender }}">
-          {{ block_data.change_block.sender }}
+        <i class="copy_btn" data-value="{{block_data.change_block.representative}}"></i>
+        <a href="{{ request.url_root }}account/{{ block_data.change_block.representative }}">
+          {{ block_data.change_block.representative }}
         </a>
       </div>
     </div>
