--- a/nanobrowse/templates/account_viewer.html
+++ b/nanobrowse/templates/account_viewer.html
@@ -7,9 +7,32 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css') }}" />
+    <script>
+        document.addEventListener('click', function(event) {
+        let targetElement = event.target;
+    
+        // Traverse up the DOM until we find an element with data-show-table or reach the body
+        while (targetElement && targetElement !== document.body && !targetElement.getAttribute('data-show-table')) {
+            targetElement = targetElement.parentElement;
+        }
+    
+        // Check if targetElement has data-show-table attribute
+        const targetTableID = targetElement.getAttribute('data-show-table');
+        if (targetTableID) {
+            // Hide all tables
+            document.querySelectorAll('.table').forEach(table => table.style.display = 'none');
+    
+            // Display the target table
+            document.getElementById(targetTableID).style.display = 'table';
+        }
+        });
+        
+    
+    </script>
     <script src="{{ url_for('static', filename='js/custom.js') }}"></script>
+
   </head>
-  <body class="bg-gray-100 mx-4 my-6 w-400">
+  <body data-get-delegators-for-account="{{ account_data.account }}" class="bg-gray-100 mx-4 my-6 w-400">
     <div class="container mx-auto">
       <!-- Account address -->
       <div class="text-center mb-2">
@@ -30,123 +53,15 @@
         <span class="text-left bg-purple-600 text-white text-xs ml-4 px-2 py-1 rounded">Principal Representative</span>
         {% endif %}
       </div>
+      
+      {% include 'account_viewer/account_info.html' %}
 
-      <!-- Account Info -->
-
-      <table class="mt-6 mx-auto border-collapse">
-        <tbody>
-          <!-- Balance -->
-          <tr>
-            <td class="bg-blue-500 text-white text-xs px-3 rounded w-32 h-6 flex items-center justify-center">
-              Available Balance
-            </td>
-            <td class="px-3 py-1 font-bold">{{account_data['confirmed_balance'] }}</td>
-          </tr>
-          
-          {% if account_data['show_receivable'] %}
-          <!-- Receivable balance -->
-          <tr>
-            <td class="bg-blue-600 text-white text-xs px-3 rounded w-32 h-8 flex flex-col items-center justify-center">
-              <div>Ready to receive</div>
-              <div>({{account_data['receivable_count'] }} blocks)</div>
-            </td>
-            <td class="px-3 py-2 font-bold">{{account_data['receivable_formatted'] }}</td>
-          </tr>
-          {% endif %}
-
-          {% if account_data['show_weight'] %}
-          <!-- Weight -->
-          <tr>
-            <td class="bg-purple-600 text-white text-xs px-3 rounded w-32 h-6 flex items-center justify-center">
-              Weight
-            </td>
-            <td class="px-3 py-1 font-bold">{{account_data['weight_formatted'] }}</td>
-          </tr>
-          {% endif %}
-
-          <!-- Representative -->
-          <tr>
-            <td class="bg-purple-600 text-white text-xs px-3 py-2 rounded w-32 h-6 flex items-center justify-center">
-              <a href="{{ request.url_root }}account/{{account_data['representative'] }}">Representative</a>
-            </td>
-            <td class="px-3 py-2 text-xs overflow-hidden">
-              <i class="copy_btn" data-value="{{account_data['representative']}}"></i>
-              <a href="{{ request.url_root }}account/{{account_data['representative'] }}">
-                {{account_data['representative_formatted'] }}
-              </a>
-            </td>
-          </tr>
-
-          <!-- Last Block -->
-          {#
-          <tr>
-            <td class="bg-indigo-500 text-white text-xs px-3 py-2 rounded w-32 h-6 flex items-center justify-center">
-              <a href="{{ request.url_root }}block/{{account_data['frontier'] }}"><b>Last Block</b></a>
-            </td>
-            <td class="px-3 py-2 text-xs overflow-hidden">
-              <i class="copy_btn" data-value="{{account_data['frontier']}}"></i>
-              <a href="{{ request.url_root }}block/{{account_data['frontier'] }}">
-                {{account_data['frontier_formatted'] }}
-              </a>
-            </td>
-          </tr>
-          #}
-
-          <!-- Open Block -->
-          <tr>
-            <td class="bg-green-500 text-white text-xs px-3 py-2 rounded w-32 h-6 flex items-center justify-center">
-              <a href="{{ request.url_root }}block/{{account_data['open_block'] }}"><b>Open Block</b></a>
-            </td>
-            <td class="px-3 py-2 text-xs overflow-hidden">
-              <i class="copy_btn" data-value="{{account_data['open_block']}}"></i>
-              <a href="{{ request.url_root }}block/{{account_data['open_block'] }}">
-                {{account_data['open_block_formatted'] }}
-              </a>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-
-      <!-- Transactions Table -->
-      <table class="mt-6 mx-auto">
-        <tbody>
-          {% for entry in account_data['history'] %}
-          <tr class="divide-y divide-gray-400">
-            <!-- Type Label (Send/Receive) -->
-            <td class="px-2 py-2 whitespace-nowrap text-sm">
-              <a href="{{ request.url_root }}block/{{ entry['hash'] }}">
-                <span
-                  class="flex items-center justify-center w-20 h-6 text-xs rounded {% if entry['type'] == 'send' %} bg-blue-500 text-white {% elif entry['type'] == 'change' %} bg-purple-600 text-white {% elif entry['type'] == 'receive' %} bg-green-500 text-white {% else %} bg-gray-500 text-white {% endif %}"
-                >
-                  {{ entry['type'] }}
-                </span>
-                <p class="text-xs">{{ entry['time_ago'] }}</p>
-              </a>
-            </td>
-
-            <!-- Amount -->
-            <td
-              class="px-4 py-4 whitespace-nowrap text-sm {% if entry['type'] == 'send' %} text-blue-500 {% elif entry['type'] == 'receive' %} text-green-500 {% elif entry['type'] == 'change' %} text-purple-500 {% else %} text-gray-500{% endif %}"
-            >
-              <b>{{ entry['amount_formatted'] }}</b>
-            </td>
-
-            <!-- Account & Hash -->
-            <td class="px-2 py-2 whitespace-nowrap text-sm text-gray-500">
-              <a href="{{ request.url_root }}account/{{ entry['account'] }}">
-                <i class="copy_btn" data-value="{{ entry['account'] }}"></i>
-                {{ entry['account_formatted'] }}
-              </a>
-              <br />
-              <a href="{{ request.url_root }}block/{{ entry['hash'] }}">
-                <i class="copy_btn" data-value="{{ entry['hash'] }}"></i>
-                <b>{{ entry['hash_formatted'] }}</b>
-              </a>
-            </td>
-          </tr>
-          {% endfor %}
-        </tbody>
-      </table>
+      
+      {% include 'account_viewer/history_table.html' %}
+      {% include 'account_viewer/pending_table.html' %}
+      {% include 'account_viewer/delegators_table.html' %}
+      
+      
     </div>
   </body>
 </html>
