--- a/nanobrowse/templates/block_viewer.html
+++ b/nanobrowse/templates/block_viewer.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css') }}" />
     <script src="{{ url_for('static', filename='js/custom.js') }}"></script>
+    <script defer data-domain="nanobrowse.com" src="https://plausible.bnano.info/js/script.js"></script>
   </head>
   <body class="bg-gray-100">
     <div class="flex flex-col items-center mx-4 my-6 sm:mx-auto max-w-screen-md">
