--- a/nanobrowse/templates/block_viewer/change.html
+++ b/nanobrowse/templates/block_viewer/change.html
@@ -1,55 +1,87 @@
-<div class="flex flex-col items-center mx-4 my-6 sm:mx-auto max-w-screen-md">
+<div class="flex flex-col mt-4 mx-auto max-w-screen-sm w-full">
+  <!-- Ensure this div spans full width -->
   <!-- Sender Address -->
-  <div class="text-center mb-2">
-    <span class="bg-blue-500 text-white text-sm px-2 py-1 rounded break-all">
-      <i class="copy_btn" data-value="{{block_data.change_block.account}}"></i>
-      <a href="{{ request.url_root }}account/{{ block_data.change_block.account }}">
-        {{ block_data.change_block.account }}
-      </a>
-    </span>
-    <p class="text-2xl font-bold text-center">Sender</p>
-  </div>
 
   <!-- Sender Pin Shape -->
-  <div class="flex flex-col items-center">
-    <div class="w-12 h-12 border-2 border-blue-500 rounded-full"></div>
-    <div class="bg-blue-500 h-6 w-1"></div>
-  </div>
+  <div class="flex items-start">
+    <div class="flex flex-col">
+      <div class="w-12 mt-2 h-12 border-2 border-blue-500 rounded-full"></div>
+      <div class="ml-6 bg-blue-500 h-12 w-1"></div>
+    </div>
+    <div class="text-left ml-4">
+      <div class="text-2xl font-bold">
+        Sender {% if block_data.change_block.is_known_sender %} <span class="text-xl font-light"> {% if block_data.change_block.known_sender.url %}
+        <a href="{{ block_data.change_block.known_sender.url }}">: {{ block_data.change_block.known_sender.name }}</a>
+        {% else %}: {{ block_data.change_block.known_sender.name }}{% endif %}</span> {% endif %}
+      </div>
 
-  <div class="flex flex-col items-center">
-    <!-- Change Block -->
-    <div class="border-2 border-purple-500 bg-purple-100 rounded p-2 text-purple-500 relative">
-      <span class="text-xs break-all">
-        <i class="copy_btn" data-value="{{block_data.change_block.hash}}"></i>
-        <a href="{{ request.url_root }}block/{{ block_data.change_block.hash }}">{{ block_data.change_block.hash }}</a>
-      </span>
-      <p class="text-2xl font-bold text-center mb-6">{{ block_data.change_block.amount }} Ӿ</p>
-      <span class="absolute bottom-2 left-2 bg-purple-500 text-white text-xs px-2 py-1 rounded">
-        {{ block_data.change_block.status }}
-      </span>
-      <span class="absolute bottom-2 {{ block_data.change_block.left_align }} text-black text-xs px-2 py-1">
-        {{ block_data.change_block.time_ago }}
-      </span>
-      <span class="absolute bottom-2 right-2 bg-purple-500 text-white text-xs px-2 py-1 rounded">
-        {{ block_data.change_block.block_type }}
-      </span>
+      <div class="bg-blue-500 text-white text-sm px-2 py-1 rounded overflow-hidden whitespace-nowrap">
+        <i class="copy_btn" data-value="{{block_data.change_block.sender}}"></i>
+        <a href="{{ request.url_root }}account/{{ block_data.change_block.sender }}">
+          {{ block_data.change_block.sender }}
+        </a>
+      </div>
     </div>
   </div>
 
-  <!-- Receiver Pin Shape  -->
-  <div class="flex flex-col items-center">
-    <div class="bg-purple-600 h-6 w-1"></div>
-    <div class="w-12 h-12 border-2 border-purple-600 rounded-full"></div>
-  </div>
+  <!-- Ensure this div spans full width -->
+  <!-- Send Block -->
 
-  <!-- Receiver Address -->
-  <div class="text-center">
-    <p class="text-2xl font-bold text-center">New Representative</p>
-    <span class="bg-purple-600 text-white text-sm px-2 py-1 rounded break-all">
-      <i class="copy_btn" data-value="{{block_data.representative}}"></i>
-      <a href="{{ request.url_root }}account/{{ block_data.change_block.representative }}">
-        {{ block_data.change_block.representative }}
-      </a>
+  <!-- Ensure this div spans full width -->
+  <div class="border-2 border-purple-500 bg-purple-100 rounded p-2 text-purple-500 w-full relative text-center">
+    <span class="text-xs whitespace-nowrap overflow-hidden block mb-1 mt-1">
+      <i class="copy_btn" data-value="{{block_data.change_block.hash}}"></i>
+      <a href="{{ request.url_root }}block/{{ block_data.change_block.hash }}">{{ block_data.change_block.hash }}</a>
+    </span>
+    <p class="font-light mb-6">delegate<span class="text-2xl font-bold"> {{ block_data.change_block.balance }}</span></p>
+    <span class="absolute bottom-2 left-2 bg-purple-500 text-white text-xs px-2 py-1 rounded">
+      {{ block_data.change_block.status }}
+    </span>
+    <span class="absolute bottom-2 {{ block_data.change_block.left_align }} text-black text-xs px-2 py-1">
+      {{ block_data.change_block.time_ago }}
+    </span>
+    <span class="absolute bottom-2 right-2 bg-purple-500 text-white text-xs px-2 py-1 rounded">
+      {{ block_data.change_block.block_type }}
     </span>
   </div>
+  
+  
+  
+  <!-- Receiver Pin Shape -->
+  <div class="flex items-start">
+    <div class="flex flex-col">
+
+      <div class="ml-6 bg-purple-500 h-12 w-1"></div>
+      <div class="w-12 h-12 border-2 border-purple-500 rounded-full"></div>
+
+      
+    </div>
+    <div class="text-left ml-4 mt-10">
+     
+        <div class="text-2xl font-bold">New Representative
+        {% if block_data.change_block.is_known_representative %}
+        <span class="text-xl font-light">
+          {% if block_data.change_block.known_representative.url %}
+            <a href="{{ block_data.change_block.known_representative.url }}">: {{ block_data.change_block.known_representative.name }}</a>
+          {% else %}:
+             {{ block_data.change_block.known_representative.name }}
+           {% endif %}
+           </span>
+        {% endif %}
+      </div>
+
+      <div class="bg-purple-500 text-white text-sm px-2 py-1 rounded overflow-hidden whitespace-nowrap">
+        <i class="copy_btn" data-value="{{block_data.change_block.representative}}"></i>
+        <a href="{{ request.url_root }}account/{{ block_data.change_block.representative }}">
+          {{ block_data.change_block.representative }}
+        </a>
+      </div>
+    </div>
+  </div>
+  
+  
+  
+
+
+
 </div>
