--- a/nanobrowse/templates/search.html
+++ b/nanobrowse/templates/search.html
@@ -23,6 +23,7 @@
         }
       }
     </script>
+    <script defer data-domain="nanobrowse.com" src="https://plausible.bnano.info/js/script.js"></script>
   </head>
   <body class="bg-gray-100">
     <div class="mt-20 flex items-center justify-center">
