--- a/nanobrowse/templates/search.html
+++ b/nanobrowse/templates/search.html
@@ -26,9 +26,11 @@
     <script defer data-domain="nanobrowse.com" src="https://plausible.bnano.info/js/script.js"></script>
   </head>
   <body class="bg-gray-100">
+    {% include 'header/nanobrowse.html' %}
+
     <div class="mt-20 flex items-center justify-center">
       <div class="w-4/5 flex flex-col items-center" style="max-width: 800px">
-        <h1 class="text-4xl mb-4">nanoBrowse</h1>
+        
 
         {% if error %}
         <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-2 rounded relative mb-4 w-full" role="alert">
@@ -50,35 +52,27 @@
             <input type="submit" value="Search" class="bg-blue-500 text-white rounded p-2" />
           </div>
         </form>
-        <table class="mt-6">
-          <thead class="text-gray-400">
-            <td></td>
-            <td class="justify-center">Recent Confirmations</td>
-            <td class="px-2">Stats</td>
-          </thead>
-          <tbody>
-            {% for entry in recent_blocks %}
-            <tr class="divide-y divide-gray-400">
-              <!-- Time Ago -->
-              <td class="px-4 py-2 whitespace-nowrap text-sm">{{ entry['time_ago'] }}</td>
-              <!-- Block Hash -->
-              <td class="px-4 py-2 whitespace-nowrap text-sm">
-                <a href="{{ request.url_root }}block/{{ entry['hash'] }}">
-                  <b>{{ entry['hash_formatted'] }}</b>
-                  <!-- Showing only first 10 characters for brevity -->
-                </a>
-              </td>
-              <!-- Voters & Duration -->
-              <td class="px-4 py-2 whitespace-nowrap text-sm">
-                {{ entry['conf_duration'] }}
-                <br />
-                {{ entry['voters'] }}
-              </td>
-            </tr>
-            {% endfor %}
-          </tbody>
-        </table>
+
+         <!-- Toggle Buttons -->
+        <div class="mt-4 mb-4">
+          <button onclick="showSection('confirmationHistory')" class="bg-blue-600 text-white text-xs px-2 py-1 rounded">Confirmation History</button>
+          <button onclick="showSection('representatives')" class="bg-purple-600 text-white text-xs px-2 py-1 rounded ml-2">Online Representative</button>
+        </div>
+        <div id="confirmationHistory">
+          {% include 'search/confirmation_history.html' %}
+        </div>
+        <div id="representatives" class="hidden">
+          {% include 'search/reps_online.html' %}
+        </div>
+        
       </div>
     </div>
+
+    <script>
+      function showSection(section) {
+        document.getElementById('confirmationHistory').style.display = section === 'confirmationHistory' ? 'block' : 'none';
+        document.getElementById('representatives').style.display = section === 'representatives' ? 'block' : 'none';
+      }
+    </script>
   </body>
 </html>
