Change button to "Latest transactions"

--- a/nanobrowse/templates/search.html
+++ b/nanobrowse/templates/search.html
@@ -55,8 +55,8 @@
 
          <!-- Toggle Buttons -->
         <div class="mt-4 mb-4">
-          <button onclick="showSection('confirmationHistory')" class="bg-blue-600 text-white text-xs px-2 py-1 rounded">Confirmation History</button>
-          <button onclick="showSection('representatives')" class="bg-purple-600 text-white text-xs px-2 py-1 rounded ml-2">Online Representative</button>
+          <button onclick="showSection('confirmationHistory')" class="bg-blue-600 text-white text-xs px-2 py-1 rounded">Latest Transactions</button>
+          <button onclick="showSection('representatives')" class="bg-purple-600 text-white text-xs px-2 py-1 rounded ml-2">Online Representatives</button>
         </div>
         <div id="confirmationHistory">
           {% include 'search/confirmation_history.html' %}
