--- a/nanobrowse/templates/account_viewer.html
+++ b/nanobrowse/templates/account_viewer.html
@@ -8,24 +8,39 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css') }}" />
     <script>
-        document.addEventListener('click', function(event) {
+        document.addEventListener('DOMContentLoaded', function() {
+        // Check for 'grouped' URL parameter
+        const urlParams = new URLSearchParams(window.location.search);
+        const showGrouped = urlParams.has('grouped');
+      
+        // Decide which table to show based on the 'grouped' parameter
+        const defaultTableID = showGrouped ? 'groupedTransactionTable' : 'transactionTable';
+      
+        // Hide all tables
+        document.querySelectorAll('.table').forEach(table => table.style.display = 'none');
+      
+        // Show the default table
+        document.getElementById(defaultTableID).style.display = 'table';
+       });
+
+       document.addEventListener('click', function(event) {
         let targetElement = event.target;
-    
+      
         // Traverse up the DOM until we find an element with data-show-table or reach the body
         while (targetElement && targetElement !== document.body && !targetElement.getAttribute('data-show-table')) {
-            targetElement = targetElement.parentElement;
+          targetElement = targetElement.parentElement;
         }
-    
+      
         // Check if targetElement has data-show-table attribute
         const targetTableID = targetElement.getAttribute('data-show-table');
         if (targetTableID) {
-            // Hide all tables
-            document.querySelectorAll('.table').forEach(table => table.style.display = 'none');
-    
-            // Display the target table
-            document.getElementById(targetTableID).style.display = 'table';
+          // Hide all tables
+          document.querySelectorAll('.table').forEach(table => table.style.display = 'none');
+      
+          // Display the target table
+          document.getElementById(targetTableID).style.display = 'table';
         }
-        });
+      });
         
     
     </script>
@@ -49,7 +64,9 @@
         <span
           class="bg-{% if account_data['show_weight'] %}purple{% else %}blue{% endif %}-500 text-white text-xs px-2 py-1 rounded"
         >
-          {{ account_data.known_account.name}}
+        {% if account_data.known_account.url %}
+        <a href="{{ account_data.known_account.url }}">: {{ account_data.known_account.name }}</a>
+        {% else %}: {{ account_data.known_account.name }}{% endif %}
         </span>
         {% endif %} {% if account_data['is_pr'] %}
         <span class="text-left bg-purple-600 text-white text-xs ml-4 px-2 py-1 rounded">Principal Representative</span>
@@ -58,10 +75,22 @@
       
       {% include 'account_viewer/account_info.html' %}
 
+      <div class="mt-4 text-xs flex items-center justify-center space-x-2">
+        <button data-show-table="groupedTransactionTable" class=" bg-red-300 text-black px-3 py-1 rounded focus:outline-none">
+          Grouped Flows
+        </button> 
+        
+        <button data-show-table="transactionTable" class=" bg-blue-500 text-white px-3 py-1 rounded focus:outline-none">
+          Timeline
+        </button>
+      </div>
+
+
       
       {% include 'account_viewer/history_table.html' %}
       {% include 'account_viewer/pending_table.html' %}
       {% include 'account_viewer/delegators_table.html' %}
+      {% include 'account_viewer/grouped_history.html' %}
       
       
     </div>
