--- a/nanobrowse/templates/account_viewer/delegators_table.html
+++ b/nanobrowse/templates/account_viewer/delegators_table.html
@@ -14,13 +14,13 @@
             
             <!-- delegate -->
             <td class="px-2 py-2 whitespace-nowrap text-sm">
-              <a href="{{ request.url_root }}block/{{ entry['hash'] }}">
+              <!-- <a href="{{ request.url_root }}block/{{ entry['hash'] }}">  -->
                 <span
                   class="flex items-center justify-center w-20 h-6 text-xs rounded bg-purple-600 text-white"
                 >
                   delegate
                 </span>
-              </a>
+               <!-- </a> -->
             </td>
             
             
